基于RBAC的自定义认证

--- a/hello-spring-security-oauth2-dependencies/pom.xml
+++ b/hello-spring-security-oauth2-dependencies/pom.xml
@@ -8,6 +8,7 @@
     <packaging>pom</packaging>
 
     <properties>
+        <spring-boot-mapper.version>2.1.5</spring-boot-mapper.version>
         <spring-cloud.version>Hoxton.RELEASE</spring-cloud.version>
     </properties>
 
@@ -34,6 +35,12 @@
                 <version>${spring-cloud.version}</version>
                 <type>pom</type>
                 <scope>import</scope>
+            </dependency>
+
+            <dependency>
+                <groupId>tk.mybatis</groupId>
+                <artifactId>mapper-spring-boot-starter</artifactId>
+                <version>${spring-boot-mapper.version}</version>
             </dependency>
         </dependencies>
     </dependencyManagement>
